<resources>
    <string name="app_name">MENUMAKER</string>
    <string name="title_home">Accueil</string>
    <string name="title_fridge">Provisions</string>
    <string name="title_dishes">Plats</string>
    <string name="manage_guests">Gérer des convives</string>
    <string name="create_recipe">Ajouter une recette</string>
    <string name="save">Enregistrer</string>
    <string name="load">Charger</string>
    <string name="take_pic">Prendre une photo</string>
    <string name="title_provisions">Provisions</string>
    <string name="title_shop">Shopping List</string>
    <string name="validation_fridge">Ajouter un ingrédient</string>
    <string name="removing_fridge" >X</string>
    <string name="ingredients_type"> L, g ou unités</string>
    <string name="recipe">Recette</string>
    <string name="recipe_name">Nom de la recette</string>
</resources>
