<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabItem
            android:id="@+id/provisions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_provisions" />

        <android.support.design.widget.TabItem
            android:id="@+id/shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_shop" />

    </android.support.design.widget.TabLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/removing_fridge" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="261dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/validation_fridge" />
</RelativeLayout>
