<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabItem
            android:id="@+id/provisions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_provisions" />

        <android.support.design.widget.TabItem
            android:id="@+id/shopping_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_shop" />

    </android.support.design.widget.TabLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="29dp"
        android:text="@string/removing_fridge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="261dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="30dp"
        android:text="@string/validation_fridge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>