<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_height="100sp"
        android:layout_width="90sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="500sp"/>

    <Button
        android:id="@+id/button_image"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="110sp"
        android:layout_marginTop="500sp"
        android:text="@string/take_pic"/>

    <Button
        android:id="@+id/button_save"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="200sp"
        android:layout_marginTop="500sp"
        android:text="@string/save"/>

    <Button
        android:id="@+id/button_load"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="290sp"
        android:layout_marginTop="500sp"
        android:text="@string/load"/>

</RelativeLayout>

